--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -15,23 +15,24 @@
       justify-content: center;
       align-items: center;
       /* -webkit-app-region: drag;  */
+      /* color: rgba(0, 0, 0, 0); */
     }
 
     #root {
       width: 100%;
       height: 100%;
-      background-color: rgb(0, 128, 255); /* 半透明背景 */
+      background-color: rgba(0, 128, 255, 0.182); /* 半透明背景 */
       border-radius: 50%; 
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 20px;
-      color: white;
+      font-size: 10px;
+      color: rgba(0, 0, 0, 0);
     }
   </style>
 </head>
 <body>
-  <div id="root">嘻嘻</div>
+  <div id="root"></div>
 
   <script>
     const { ipcRenderer } = require('electron');
@@ -40,13 +41,11 @@
     // 监听鼠标进入SVG区域
     svgElement.addEventListener('mouseenter', () => {
       ipcRenderer.send('set-ignore-mouse-events', false); // 不穿透
-      console.log("123");
     });
 
     // 监听鼠标离开SVG区域
     svgElement.addEventListener('mouseleave', () => {
       ipcRenderer.send('set-ignore-mouse-events', true, { forward: true }); // 穿透透明区域
-      console.log('456');
     });
     svgElement.addEventListener('mousedown', (e) => {
       if (e.buttons == 1) {
